Fix a mistake in the maze encoding. Add checks to catch this kind of mistake (missing border on the maze edges). Leverage bitwise flags properly while parsing the maze JSON. Increase border width to 5px to more closely match the given spec. Maze edges will need more careful consideration regarding the borders. Move some of the maze CSS up a level to prepare for adding the controls modal.

--- a/src/app/maze/maze.component.css
+++ b/src/app/maze/maze.component.css
@@ -1,14 +1,10 @@
-.screen {
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(0deg, rgba(2, 121, 152, 0.6), rgba(2, 121, 152, 0.6)), url('../../../Assignment Assets/Images/Classroom+Window.png');
-    overflow: hidden;
-}
 
 table {
     background-color: rgb(255, 255, 255);
     border: 2.5px solid #495058;
     border-collapse: collapse;
+    margin: auto;
+    vertical-align: middle;
 }
 
 td {
@@ -21,17 +17,17 @@ td {
 }
 
 .maze-square-top {
-    border-top-width: 2.5px;
+    border-top-width: 5px;
 }
 
 .maze-square-right {
-    border-right-width: 2.5px;
+    border-right-width: 5px;
 }
 
 .maze-square-bottom {
-    border-bottom-width: 2.5px;
+    border-bottom-width: 5px;
 }
 
 .maze-square-left {
-    border-left-width: 2.5px;
+    border-left-width: 5px;
 }
